resolve various intellij inspections